(library
 (name graph)
 (modules graph)
 (preprocess
  (pps ppx_jane bisect_ppx))
 (libraries core yojson))

(library
 (name broql)
 (wrapped false)
 (preprocess
  (pps ppx_deriving.show))
 (modules broql_lexer broql_parser broql_ast pp eval debugutils)
 (libraries graph))

(ocamllex
 (modules broql_lexer))

(menhir
 (modules broql_parser))

(executable
 (name interpreter)
 (modules interpreter)
 (preprocess
  (pps ppx_deriving.show))
 (libraries broql))

(executable
 (name main)
 (modules main)
 (libraries core graph yojson))
