(library
 (name graph)
 (modules graph)
 (preprocess
  (pps ppx_jane bisect_ppx))
 (libraries core yojson))

(library
 (name broql)
 (wrapped false)
 (preprocess
  (pps ppx_deriving.show))
 (modules lexer parser ast pp eval debugutils)
 (libraries graph))

(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(executable
 (name broqli)
 (modules broqli)
 (preprocess
  (pps ppx_deriving.show))
 (libraries broql))

(executable
 (name main)
 (modules main)
 (libraries core graph yojson))
